--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -66,6 +66,7 @@ a:hover {
 
 main {
   flex: 1;
+  padding-bottom: 60px; /* під футер ~60px */
 }
 
 .footer {
@@ -73,7 +74,7 @@ main {
   color: #fff;
   text-align: center;
   padding: 10px;
-  position: fixed;
+  position: static; /* або */
   width: 100%;
   bottom: 0;
 }
