--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -86,7 +86,7 @@ main {
   padding: 20px;
   background-color: #fff;
   border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 10px rgb(0 0 0 / 10%);
 }
 
 #register-form label {
